prepare to integrate frontend in chat-service
