# apps/backend/chat-service/src/controllers/types/message.controller.types.ts
@@ -1,0 +1,18 @@
+import mongoose from "mongoose";
+
+export interface conversation {
+  _id: string;
+  participants: mongoose.Types.ObjectId[];
+  messages: {
+    _id: string;
+    senderId: mongoose.Types.ObjectId;
+    receiverId: mongoose.Types.ObjectId;
+    message: string;
+    createdAt: Date;
+    updatedAt: Date;
+    // conversationId: mongoose.Types.ObjectId;
+  }[];
+  createdAt: Date;
+  updatedAt: Date;
+  roomId: string;
+}
